--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     def nav_version = "2.3.0-alpha06"
 
     // Java language implementation
